--- a/staff-index/css/staff-course.css
+++ b/staff-index/css/staff-course.css
@@ -44,6 +44,13 @@ display: flex;
   align-items: center;
   justify-content: center;
 }
+.edit-button-area-new{
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .ready-bt{
   height: 70%;
   width: 10%;
@@ -60,10 +67,28 @@ display: flex;
   cursor: pointer;
   transition: backgroud-color ease 0.3s;
 }
+.ready-bt-new{
+  height: 70%;
+  width: 10%;
+  margin-left: 25px;
+  border: none;
+  font-size: 18px;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  border-radius: 8px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  background-color: #72ed67;
+  cursor: pointer;
+  transition: backgroud-color ease 0.3s;
+}
+.ready-bt-new:hover{
+  background-color: #53b34b;
+}
 .chancel-bt{
   height: 70%;
   width: 10%;
-  margin-right: 25px;
   border: none;
   font-size: 18px;
   justify-content: center;
@@ -173,6 +198,52 @@ align-items: center;
 box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 margin-bottom: 20px;
 }
+.new-class-area{
+  width: 95%;
+  height: auto;
+  display: none;
+  flex-direction: column;
+}
+.left-course-bt-area{
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bt-area-bt{
+  height: 65%;
+  width: 10%;
+  border: none;
+  margin-left: 10px;
+    font-size: 18px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    cursor: pointer;
+    border-radius: 8px;
+    background-color: #efefef;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    transition: background-color ease 0.3s;
+}
+.bt-area-bt.active{
+  background-color: #c4c4c4;
+}
+.bt-area-bt:hover{
+  background-color: #c4c4c4;
+}
+.left-course-class-new{
+  width: 90%;
+  height: auto;
+  display: none;
+  flex-direction: column;
+  background-color: #f1f3f4;
+  border-radius: 20px;
+  align-items: center;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  margin-bottom: 20px;
+}
 
 .left-course-class-header{
 margin-top: 10px;
@@ -188,6 +259,7 @@ font-size: 36px;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 border: none;
 color: #484747eb;
+padding-left: 10px;
 box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 border-radius: 15px;
 }
@@ -195,6 +267,7 @@ border-radius: 15px;
     margin-left: 5px;
     height: 150px;
     width: 100%;
+    padding-left: 10px;
     border: none;
     resize: none;
     font-size: 20px;
@@ -270,6 +343,13 @@ display: flex;
 font-size: 20px;
 margin-bottom: 10px;
 }
+.content-date-new{
+  margin-top: 10px;
+  align-items: center;
+  display: none;
+  font-size: 20px;
+  margin-bottom: 10px;
+  }
 .submit-area{
 margin-top: 24px;
 margin-bottom: 10px;
@@ -282,6 +362,18 @@ flex-direction: column;
 margin-bottom: 20px;
 box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
+.submit-area-new{
+  margin-top: 24px;
+  margin-bottom: 10px;
+  height: 382px;
+  width: 65%;
+  flex-shrink: 0;
+  display: flex;
+  border-radius: 15px;
+  flex-direction: column;
+  margin-bottom: 20px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  }
 
 .submit-area-header{
 font-size: 23px;
@@ -429,18 +521,28 @@ color: #f43333;
 }
 .scoring{
   display: flex;
-  width: 80%;
+  width: 100%;
   height: 120px;
   border-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
+}
+.changeready{
+  width: 50%;
+  height: 100%;
+  background-color: #00000000;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .scoring-info{
-  width: 25%;
+  width: 20%;
   height: 100%;
   display: flex;
   flex-direction: column;
   background-color: #ececec;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
 }
@@ -464,14 +566,15 @@ color: #f43333;
 
 }
 .scoring-file{
-  width: 55%;
+  width: 45%;
   height: 100%;
   display: flex;
   flex-direction: column;
   overflow: auto;
   background-color: #ffffff04;
-  border-left: 1px solid #b9c2d2;
-  border-right: 1px solid #b9c2d2;
+  border-top: 1px solid #b9c2d2;
+  border-bottom: 1px solid #b9c2d2;
+
 }
 .scoring-file-content{
   height: 40%;
@@ -489,12 +592,12 @@ color: #f43333;
   overflow: hidden;
 }
 .scoring-grade{
-  width: 20%;
+  width: 35%;
   height: 100%;
   display: flex;
-  flex-direction: column;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
+
 
 }
 .scoring-grade-top input{
@@ -504,24 +607,29 @@ color: #f43333;
   border-top-right-radius: 15px;
   background-color: #00000000;
   border: none;
-
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   text-align: center;
 }
 .scoring-grade-top{
-  height: 50%;
-  width: 100%;
+  height: 100%;
+  width: 50%;
   display: flex;
+  flex-direction: column;
   border: none;
   border-top-right-radius: 15px;
 }
-.scoring-grade-top div{
+.top-score-header{
   width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.scoring-grade-top-div{
+  width: 100%;
   height: 100%;
   display: flex;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  justify-content: center;
-  align-items: center;
 }
 .contraction{
   height: 11%;
@@ -551,6 +659,7 @@ cursor: pointer;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 border-bottom-right-radius: 15px;
 transition: all ease 0.3s;
+box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 .sfc-date{
   margin-left: auto;
